--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>加油</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.5" />
+    <title></title>
   </head>
   <body>
-    <h1>2023年1月12日</h1>
-    <p>现在还不知道干些啥</p>
-    <p>继续加油吧</p>
-    <p>相信自己</p>
-    <p>真好</p>
+    <input value="执着于理想，纯粹于当下。" />
   </body>
 </html>
