--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.5" />
-    <title></title>
+    <title>当下</title>
   </head>
   <body>
-    <input value="执着于理想，纯粹于当下。" />
+    <div style="color: aquamarine">
+      <h3></h3>
+      <p>你这一生到底想干嘛</p>
+      <p>你怎样活着才是有意义的</p>
+      <p>会感到迷茫</p>
+      <p>过好每一天</p>
+      <p>演好当下的剧本</p>
+      <p>朝着心中的那个标杆去前进</p>
+      <p>最重要是你</p>
+      <p>听不到内心对你的抱怨</p>
+      <p>最重要是</p>
+      <p>多年以后的你能够看得起现在的你</p>
+    </div>
   </body>
 </html>
